# reboot-hello

./: .env  .gitignore  .mypy.ini  .rbtrc  .rsmrc  BUILD.bazel  Dockerfile  README.md  build.sh  pyproject.toml  readme_test.sh
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
.mergequeue/: config.yml
.tests/: serve_test.sh  test.sh
api/chat/v1/: chat.proto
api/chat_room/v1/: chat_room.proto
api/hello/v1/: hello.proto
api/hello_world/v1/: greeter.proto
backend/: .pytest.ini
backend/src/: chat_room_servicer.py  chat_servicer.py  greeter_servicer.py  hello_servicer.py  main.py  requirements.txt
backend/tests/: chat_room_servicer_test.py  chat_servicer_test.py  greeter_servicer_test.py  hello_servicer_test.py
reboot-non-react-web/: .gitignore  index.css  index.html  package-lock.json  package.json  tsconfig.json
reboot-non-react-web/src/: main.ts
web/: .env  .gitignore  config-overrides.js  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: index.html  manifest.json
web/src/: App.module.css  App.tsx  Chat.ts  ChatBox.module.css  ChatBox.tsx  ChatContainer.module.css  ChatContainer.tsx  Login.module.css  Login.tsx  Message.module.css  Message.tsx  MessageContainer.module.css  MessageContainer.tsx  ResembleClientProvider.tsx  event.ts  helpers.ts  index.tsx  resemble_react.ts
