# This `BUILD.bazel` file allows a `bazel` system (configured outside of this
# repository) to use code in this directory and its subdirectories.

filegroup(
    name = "everything",
    srcs = glob(
        ["**/*"],
        exclude = [
            # Folders that may be created by activity in this repository, such
            # as manually following the steps of the `README.md` file, but which
            # are not part of the "source code" of this repository.
            ".pytest_cache/**/*",
        ],
    ),
    visibility = ["//visibility:public"],
)
