# This `BUILD.bazel` file allows a `bazel` system (configured outside of this
# repository) to use code in this directory and its subdirectories.

filegroup(
    name = "everything",
    srcs = glob(
        ["**/*"],
        exclude = [
            # Files that may be created by activity in this directory, such
            # as manually following the steps of the `README.md` file, but which
            # are not part of the "source code" of this repository.
            ".resemble-hello-venv/**/*",
            ".pytest_cache/**/*",
            "api/gen/**/*.js",
            "web/node_modules/**/*",
            "web/dist/**/*",
            "web/src/gen/**/*.js",
            "web/src/gen/**/*.ts",
            "web/package-lock.json",
        ],
    ),
    visibility = ["//visibility:public"],
)
